blake3_guts_riscv64gcv_hash_parents
The test command is currently:

    CC="$HOME/llvm-project/build/bin/clang" \
    CARGO_TARGET_RISCV64GC_UNKNOWN_LINUX_GNU_LINKER=riscv64-linux-gnu-gcc \
    CARGO_TARGET_RISCV64GC_UNKNOWN_LINUX_GNU_RUSTFLAGS="-L /usr/lib/gcc/riscv64-linux-gnu/12.2.0" \
    CARGO_TARGET_RISCV64GC_UNKNOWN_LINUX_GNU_RUNNER="$HOME/qemu/build/qemu-riscv64 -L /usr/riscv64-linux-gnu -cpu rv64,v=true,vext_spec=v1.0,vlen=512,zbb=true,x-zvbb=true" \
    cargo test --target riscv64gc-unknown-linux-gnu

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,6 +178,8 @@ jobs:
           - armv7-unknown-linux-gnueabihf
           - aarch64-unknown-linux-gnu
           - mips-unknown-linux-gnu
+          - riscv32-unknown-linux-gnu
+          - riscv64-unknown-linux-gnu
 
     steps:
     - uses: actions/checkout@v3
