Enable `doc_auto_cfg` feature
This allows an API be documented as only available when the feature is
enabled. This is useful when reading the document published on docs.rs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,8 +80,8 @@ no_neon = []
 zeroize = ["zeroize_crate", "arrayvec/zeroize"]
 
 [package.metadata.docs.rs]
-# Document Hasher::update_rayon on docs.rs.
-features = ["rayon"]
+features = ["rayon", "traits-preview", "zeroize"]
+rustdoc-args = ["--cfg", "doc_cfg"]
 
 [dependencies]
 arrayref = "0.3.5"
