--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,11 +95,12 @@ features = ["mmap", "rayon", "zeroize"]
 arrayref = "0.3.5"
 arrayvec = { version = "0.7.4", default-features = false }
 constant_time_eq = "0.3.0"
-rayon = { version = "1.2.1", optional = true }
 cfg-if = "1.0.0"
 digest = { version = "0.10.1", features = [ "mac" ], optional = true }
-zeroize = { version = "1", default-features = false, features = ["zeroize_derive"], optional = true }
 memmap2 = { version = "0.7.1", optional = true }
+rayon = { version = "1.2.1", optional = true }
+serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
+zeroize = { version = "1", default-features = false, features = ["zeroize_derive"], optional = true }
 
 [dev-dependencies]
 hmac = "0.12.0"
