--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ default = ["std"]
 # implementation uses C intrinsics and requires a C compiler.
 neon = []
 
+# The WASM-SIMD implementation does not participate in dynamic feature detection,
+# which is currently x86-only. If "wasm_simd" is on, WASM SIMD support is assumed.
+# Note that not all WASM implementation may support WASM-SIMD specification.
+wasm32_simd = []
+
 # This crate uses libstd for std::io trait implementations, and also for
 # runtime CPU feature detection. This feature is enabled by default. If you use
 # --no-default-features, the only way to use the SIMD implementations in this
