--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,9 @@ no_avx2 = []
 no_avx512 = []
 no_neon = []
 
+# This feature enables the tokio AsyncWrite implementation for the hashers.
+tokio = ["dep:tokio", "std"]
+
 [package.metadata.docs.rs]
 # Document the rayon/mmap methods and the Zeroize impls on docs.rs.
 features = ["mmap", "rayon", "zeroize"]
@@ -100,6 +103,7 @@ cfg-if = "1.0.0"
 digest = { version = "0.10.1", features = [ "mac" ], optional = true }
 zeroize = { version = "1", default-features = false, features = ["zeroize_derive"], optional = true }
 memmap2 = { version = "0.7.1", optional = true }
+tokio = { version = "1", default-features = false, features = [], optional = true }
 
 [dev-dependencies]
 hmac = "0.12.0"
