Use CMAKE_CURRENT_SOURCE_DIR instead of PROJECT_SOURCE_DIR
Co-authored-by: Henrik Gaßmann <BurningEnlightenment@users.noreply.github.com>

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -48,7 +48,7 @@ if (BUILD_SHARED_LIBS)
   list(APPEND BLAKE3_PKGCONFIG_CFLAGS -DBLAKE3_DLL)
 endif()
 target_include_directories(blake3 PUBLIC
-  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 set_target_properties(blake3 PROPERTIES
