--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -20,8 +20,17 @@ clap = { version = "4.0.8", features = ["derive", "wrap_help"] }
 hex = "0.4.0"
 memmap2 = "0.7.0"
 rayon = "1.2.1"
+read_chunks = "0.2.0"
 wild = "2.0.3"
 
 [dev-dependencies]
 duct = "0.13.3"
 tempfile = "3.1.0"
+
+
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+overflow-checks = true
+lto = "thin"
