--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,8 +92,8 @@ no_avx512 = []
 no_neon = []
 
 [package.metadata.docs.rs]
-# Document the rayon/mmap methods and the Serialize/Deserialize/Zeroize impls on docs.rs.
-features = ["mmap", "rayon", "serde", "zeroize"]
+# Document the rayon/mmap methods and the Serialize/Deserialize/Zeroize/RngCore impls on docs.rs.
+features = ["mmap", "rayon", "serde", "zeroize", "rand"]
 
 [dependencies]
 arrayref = "0.3.5"
