--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ default = ["std"]
 # implementation uses C intrinsics and requires a C compiler.
 neon = []
 
+# The RVV implementation does not participate in dynamic feature detection,
+# which is currently x86-only. If "rvv" is on, RVV support is assumed. The
+# RVV implementation uses C intrinsics and requires a C compiler.
+rvv = []
+
 # This crate uses libstd for std::io trait implementations, and also for
 # runtime CPU feature detection. This feature is enabled by default. If you use
 # --no-default-features, the only way to use the SIMD implementations in this
