--- a/test_vectors/Cargo.toml
+++ b/test_vectors/Cargo.toml
@@ -12,6 +12,7 @@ pure = ["blake3/pure"]
 # If you ever change these path dependencies, you'll probably need to update
 # cross_test.sh, or CI will break. I'm sorry >.<
 blake3 = { path = "../" }
+blake3_guts = { path = "../rust/guts" }
 hex = "0.4.0"
 reference_impl = { path = "../reference_impl" }
 serde = { version = "1.0", features = ["derive"] }
