--- a/rust/guts/Cargo.toml
+++ b/rust/guts/Cargo.toml
@@ -9,6 +9,9 @@ documentation = "https://docs.rs/blake3_guts"
 readme = "readme.md"
 edition = "2021"
 
+[dependencies]
+cfg-if = "1.0.0"
+
 [dev-dependencies]
 hex = "0.4.3"
 reference_impl = { path = "../../reference_impl" }
@@ -16,3 +19,6 @@ reference_impl = { path = "../../reference_impl" }
 [features]
 default = ["std"]
 std = []
+
+[build-dependencies]
+cc = "1.0.79"
