--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -28,4 +28,5 @@ tempfile = "3.1.0"
 [build-dependencies]
 blake3 = { version = "1", path = ".." }
 clap = { version = "4.0.8", features = ["derive"] }
+clap_complete = "4.5.2"
 clap_mangen = "0.2.20"
