Set `rust-version`

--- a/b3sum/Cargo.toml
+++ b/b3sum/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/BLAKE3-team/BLAKE3"
 license = "CC0-1.0 OR Apache-2.0"
 readme = "README.md"
 edition = "2021"
+rust-version = "1.74.1"
 
 [features]
 neon = ["blake3/neon"]
