--- a/c/blake3_c_rust_bindings/Cargo.toml
+++ b/c/blake3_c_rust_bindings/Cargo.toml
@@ -8,6 +8,7 @@ name = "blake3_c_rust_bindings"
 version = "0.0.0"
 description = "TESTING ONLY Rust bindings for the BLAKE3 C implementation"
 edition = "2021"
+rust-version = "1.56.0"
 
 [features]
 # By default the x86-64 build uses assembly implementations. This feature makes
