--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(dependencies)
 set(BLAKE3_AMD64_NAMES amd64 AMD64 x86_64)
 set(BLAKE3_X86_NAMES i686 x86 X86)
 set(BLAKE3_ARMv8_NAMES aarch64 AArch64 arm64 ARM64 armv8 armv8a)
+set(BLAKE3_LOONG_NAMES loongarch64)
 # default SIMD compiler flag configuration (can be overriden by toolchains or CLI)
 if(MSVC)
   set(BLAKE3_CFLAGS_SSE2 "/arch:SSE2" CACHE STRING "the compiler flags to enable SSE2")
@@ -76,6 +77,18 @@ elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU"
     # 32-bit ARMv8 needs NEON to be enabled explicitly
     set(BLAKE3_CFLAGS_NEON "-mfpu=neon" CACHE STRING "the compiler flags to enable NEON")
   endif()
+
+  if(CMAKE_SYSTEM_PROCESSOR IN_LIST BLAKE3_LOONG_NAMES)
+    include(CheckCCompilerFlag)
+    check_c_compiler_flag(-mlasx COMPILER_SUPPORTS_LASX)
+    if(COMPILER_SUPPORTS_LASX)
+      set(BLAKE3_CFLAGS_LASX "-mlasx" CACHE STRING "the compiler flags to enable lasx")
+    endif()
+    check_c_compiler_flag(-mlsx COMPILER_SUPPORTS_LSX)
+    if(COMPILER_SUPPORTS_LSX)
+      set(BLAKE3_CFLAGS_LSX "-mlsx" CACHE STRING "the compiler flags to enable lsx")
+    endif()
+  endif()
 endif()
 
 mark_as_advanced(BLAKE3_CFLAGS_SSE2 BLAKE3_CFLAGS_SSE4.1 BLAKE3_CFLAGS_AVX2 BLAKE3_CFLAGS_AVX512 BLAKE3_CFLAGS_NEON)
@@ -112,6 +125,10 @@ elseif((CMAKE_SYSTEM_PROCESSOR IN_LIST BLAKE3_ARMv8_NAMES
         AND (DEFINED BLAKE3_CFLAGS_NEON
           OR CMAKE_SIZEOF_VOID_P EQUAL 8))
   set(BLAKE3_SIMD_TYPE "neon-intrinsics" CACHE STRING "the SIMD acceleration type to use")
+
+elseif(CMAKE_SYSTEM_PROCESSOR IN_LIST BLAKE3_LOONG_NAMES
+        AND (DEFINED BLAKE3_CFLAGS_LSX OR DEFINED BLAKE3_CFLAGS_LASX))
+  set(BLAKE3_SIMD_TYPE "loong-intrinsics" CACHE STRING "the SIMD acceleration type to use")
 
 else()
   set(BLAKE3_SIMD_TYPE "none" CACHE STRING "the SIMD acceleration type to use")
@@ -205,6 +222,22 @@ elseif(BLAKE3_SIMD_TYPE STREQUAL "neon-intrinsics")
     set_source_files_properties(blake3_neon.c PROPERTIES COMPILE_FLAGS "${BLAKE3_CFLAGS_NEON}")
   endif()
 
+elseif(BLAKE3_SIMD_TYPE STREQUAL "loong-intrinsics")
+  set(BLAKE3_SIMD_LOONG_INTRINSICS ON)
+
+  if (DEFINED BLAKE3_CFLAGS_LSX)
+    target_sources(blake3 PRIVATE blake3_lsx.c)
+    set_source_files_properties(blake3_lsx.c PROPERTIES COMPILE_FLAGS "${BLAKE3_CFLAGS_LSX}")
+  else()
+    target_compile_definitions(blake3 PRIVATE BLAKE3_NO_LSX)
+  endif()
+  if (DEFINED BLAKE3_CFLAGS_LASX)
+    target_sources(blake3 PRIVATE blake3_lasx.c)
+    set_source_files_properties(blake3_lasx.c PROPERTIES COMPILE_FLAGS "${BLAKE3_CFLAGS_LASX}")
+  else()
+    target_compile_definitions(blake3 PRIVATE BLAKE3_NO_LASX)
+  endif()
+
 elseif(BLAKE3_SIMD_TYPE STREQUAL "none")
   target_compile_definitions(blake3 PRIVATE
     BLAKE3_USE_NEON=0
@@ -212,6 +245,8 @@ elseif(BLAKE3_SIMD_TYPE STREQUAL "none")
     BLAKE3_NO_SSE41
     BLAKE3_NO_AVX2
     BLAKE3_NO_AVX512
+    BLAKE3_NO_LSX
+    BLAKE3_NO_LASX
   )
 
 else()
@@ -365,6 +400,7 @@ install(FILES "${CMAKE_BINARY_DIR}/libblake3.pc"
 add_feature_info("AMD64 assembly" BLAKE3_SIMD_AMD64_ASM "The library uses hand written amd64 SIMD assembly.")
 add_feature_info("x86 SIMD intrinsics" BLAKE3_SIMD_X86_INTRINSICS "The library uses x86 SIMD intrinsics.")
 add_feature_info("NEON SIMD intrinsics" BLAKE3_SIMD_NEON_INTRINSICS "The library uses NEON SIMD intrinsics.")
+add_feature_info("LoongArch SIMD intrinsics" BLAKE3_SIMD_LOONG_INTRINSICS "The library uses LoongArch LSX/LASX SIMD intrinsics.")
 add_feature_info("oneTBB parallelism" BLAKE3_USE_TBB "The library uses oneTBB parallelism.")
 feature_summary(WHAT ENABLED_FEATURES)
 
