Add `const fn` functions: `const_hash`, `const_keyed_hash` and `const_derive_key`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,9 @@ jobs:
     - run: cargo test --features= --release
     - run: cargo test --features=prefer_intrinsics --release
     - run: cargo test --features=pure --release
+    # const fn
+    - run: cargo test --features=const
+    - run: cargo test --features=const --release
     # No AVX-512.
     - run: cargo test --features=no_avx512
     - run: cargo test --features=no_avx512,prefer_intrinsics
