build(cmake): improve CMake backwards compatibility
There are no default paths for target installs on CMake 3.9.

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -206,7 +206,11 @@ endif()
 
 # cmake install support
 install(FILES blake3.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-install(TARGETS blake3 EXPORT blake3-targets)
+install(TARGETS blake3 EXPORT blake3-targets
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+)
 install(EXPORT blake3-targets
   NAMESPACE BLAKE3::
   DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/blake3"
