--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -324,7 +324,7 @@ jobs:
           ~/.cargo/bin/cargo test --features prefer_intrinsics
 
   # CMake build test (Library only), current macOS/Linux only.
-  cmake_build:
+  cmake_current_build:
     name: CMake ${{ matrix.os }} ${{ matrix.compiler }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -345,6 +345,22 @@ jobs:
         run: cmake -S c -B c/build -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/target
       - name: CMake build / install
         run: cmake --build c/build --target install
+  cmake_3-9_build:
+    name: CMake 3.9.6 ubuntu-latest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: lukka/get-cmake@5f6e04f5267c8133f1273bf2103583fc72c46b17
+        with:
+          cmakeVersion: 3.9.6
+      - name: Create build directory
+        run: mkdir c/build
+      - name: CMake generation
+        run: cmake .. -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/target
+        working-directory: c/build
+      - name: CMake build / install
+        run: make install
+        working-directory: c/build
 
   miri_smoketest:
     name: Miri smoketest
