llfio support in blake3_c_rust_bindings
Requires a CPLUS_INCLUDE_PATH setting similar to:

    export CPLUS_INCLUDE_PATH=/tmp/llfio/include:/tmp/outcome/include:/tmp/quickcpplib/include

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,6 +150,7 @@ jobs:
     - name: cargo test C bindings with TBB
       run: cargo test --features=tbb
       working-directory: ./c/blake3_c_rust_bindings
+    # TODO: How to fetch LLFIO for testing here?
     # Reference impl doc test.
     - name: reference impl doc test
       run: cargo test
