--- a/c/blake3_c_rust_bindings/Cargo.toml
+++ b/c/blake3_c_rust_bindings/Cargo.toml
@@ -18,6 +18,8 @@ prefer_intrinsics = []
 neon = []
 # Enable TBB-based multithreading.
 tbb = []
+# Enable LLFIO-based memory mapping.
+llfio = []
 
 [dev-dependencies]
 arrayref = "0.3.5"
@@ -26,6 +28,7 @@ page_size = "0.6.0"
 rand = "0.9.0"
 rand_chacha = "0.9.0"
 reference_impl = { path = "../../reference_impl" }
+tempfile = "3.18.0"
 
 [build-dependencies]
 cc = "1.0.48"
