add cargo_xwin_build to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -222,6 +222,13 @@ jobs:
     - run: ./c/blake3_c_rust_bindings/cross_test.sh --target ${{ matrix.arch }} --features=neon
       if: startsWith(matrix.arch, 'armv7-') || startsWith(matrix.arch, 'aarch64-')
 
+  cargo_xwin_build:
+    name: cargo xwin build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - run: docker run -v $(pwd):/io -w /io messense/cargo-xwin cargo xwin build --target x86_64-pc-windows-msvc
+
   # Currently only on x86.
   c_tests:
     name: C tests SIMD=${{ matrix.simd }} TBB=${{ matrix.use_tbb }}
