--- a/c/libblake3.pc.in
+++ b/c/libblake3.pc.in
@@ -8,5 +8,5 @@ Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 
 Requires: @PKG_CONFIG_REQUIRES@
-Libs: -L"${libdir}" -lblake3
+Libs: -L"${libdir}" -lblake3 @PKG_CONFIG_LIBS@
 Cflags: -I"${includedir}" @PKG_CONFIG_CFLAGS@
